--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f7f7ff;
+  overflow-x: hidden;
 }
 
 code {
