--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities; */
 
+/* import google fonts styling */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
 @import 'tailwindcss/base'; /* Preflight will be injected here */
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
